[TOP AIDANTS] Corrige l’affichage des portraits qui ne s’affichent pas correctement dans safari
… en les remplaçant par des PNG

--- a/mon-aide-cyber-ui/src/composants/landing/top-aidants.scss
+++ b/mon-aide-cyber-ui/src/composants/landing/top-aidants.scss
@@ -61,6 +61,11 @@
         gap: 10px;
         align-self: stretch;
 
+        img {
+          width: 2.675rem;
+          height: 2.675rem;
+        }
+
         @include a-partir-de(md) {
           img {
             width: 3.6rem;
