[CORRECTION][RESTITUTION] Corrige la typo OPT en OTP
Pour les mesures :
- Acces télétravail de niveau 1
- Accès administrateurs de niveau 2

--- a/mon-aide-cyber-api/src/infrastructure/restitution/mesures/acces/acces-administrateurs-si-mesures-specifiques-niveau2-comment.pug
+++ b/mon-aide-cyber-api/src/infrastructure/restitution/mesures/acces/acces-administrateurs-si-mesures-specifiques-niveau2-comment.pug
@@ -13,5 +13,5 @@ div
     p
         | Il est préconisé de s’appuyer sur les compétences d’un prestataire externe, idéalement labellisé Expert Cyber,
         | pour la mise en œuvre d’un coffre-fort de mots de passe ; d’une solution de gestion à accès à privilèges ;
-        | de l’authentification multifacteur on-premise (exemple : code OPT reçu par sms, par mail, via application ou
+        | de l’authentification multifacteur on-premise (exemple : code OTP reçu par sms, par mail, via application ou
         | clef sécurisée dédiée, par certificat)
