--- a/mon-aide-cyber-api/src/infrastructure/restitution/mesures/acces/acces-teletravail-acces-distants-mesures-particulieres-niveau1-comment.pug
+++ b/mon-aide-cyber-api/src/infrastructure/restitution/mesures/acces/acces-teletravail-acces-distants-mesures-particulieres-niveau1-comment.pug
@@ -1,7 +1,7 @@
 div
     p
         | En se basant sur les listes exhaustives des accès distants ou dits « télétravaillés », il est recommandé de
-        | mettre en place des mécanismes de double authentification (exemple : code OPT reçu par sms, par mail, via application
+        | mettre en place des mécanismes de double authentification (exemple : code OTP reçu par sms, par mail, via application
         | ou clef sécurisée dédiée, par certificat) avec à minima, avec des restrictions via adresses IP légitimes.
         | Des restrictions complémentaires pourraient par exemple mise en œuvre sur la localisation des accès entrants
         | (ex : pays), les plages horaires acceptées (exemple : heures ouvrées seulement), procédure ponctuelle d’ouverture
